--- a/webdev_c1_knowcheck_01-main (1)/webdev_c1_knowcheck_01-main/css/style.css
+++ b/webdev_c1_knowcheck_01-main (1)/webdev_c1_knowcheck_01-main/css/style.css
@@ -50,6 +50,7 @@ body {
 .hero-container {
     display: flex;
     justify-content: center;
+    align-items: center;
     background: url('https://images.pexels.com/photos/546819/pexels-photo-546819.jpeg?cs=srgb&dl=pexels-luis-gomes-546819.jpg&fm=jpg') center center no-repeat;
     background-size: cover;
     height: 80vh;
