--- a/TigerRosa Creations/site.css
+++ b/TigerRosa Creations/site.css
@@ -1,5 +1,7 @@
 * {
+    padding: 0;
     margin: 0;
+    box-sizing: border-box;
   }
   
   html,
@@ -44,7 +46,7 @@
   }
   
   main {
-    display: block;
+    display: block;.0
     background-image: url("images/background.png");
     padding-top: 3em;
     padding-bottom: 3em;
@@ -55,71 +57,10 @@
     padding: 15px;
   }
   
-  aside,
-  article {
-    padding: 2em;
-  }
-  
-  aside {
-    text-align: center;
-  }
-  
-  article {
-    width: 75%;
-  }
-  
-  .columns {
-    display: flex;
-  }
-  
-  @media only screen and (min-width: 768px) {
-    main {
-      display: flex;
-    }
-  
-    aside {
-      margin-left: 2%;
-    }
+   n
   
     .columns-desktop {
       display: flex;
     }
-  }
-  
-  /* Pie */
-  .pie {
-    width: 200px;
-    padding: 10px;
-    margin: 10px;
-    background-color: #fff;
-    border: solid 1px #ccc;
-  }
-  
-  .pie img {
-    width: 100%;
-  }
-  
-  .pie .title {
-    font-weight: bold;
-  }
-  
-  .pie .price {
-    text-align: right;
-  }
-  
-  .pie .columns {
-    width: 100%;
-  }
-  
-  .pie .columns div {
-    width: 50%;
-  }
-  
-  .pie button {
-    background-color: #f6aeae;
-    padding: 10px;
-    border: solid 1px #f6aeae;
-    border-radius: 3px;
-    color: #fff;
   }
   
